--- a/index.html
+++ b/index.html
@@ -218,7 +218,49 @@
                     <a href="#" class="btn btn--green">Diuscover all tours</a>
                 </div>
             </section>
+
+            <section class="section-stories">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        We make people genuinly happy
+                    </h2>
+
+                    <div class="row">
+                        <div class="story">
+                            TEXT
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
       <!--  <section class="grid-test">
             <div class="row">
