New Update SASS

--- a/index.html
+++ b/index.html
@@ -227,7 +227,20 @@
 
                     <div class="row">
                         <div class="story">
-                            TEXT
+                            <figure class="story__shape">
+                                <img src="img/nat-8.jpg" alt="person on a tour" class="story__img">
+                            </figure>
+                            <div class="story__text">
+                                <h3 class="heading-tertiary u-margin-bottom-small">
+                                    I had the best week over with my family
+                                </h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, 
+                                    ipsum sapiente aspernatur libero repellat quis consequatur ducimus quam 
+                                    nisi exercitationem omnis earum qui. ipsum sapiente aspernatur libero repellat quis 
+                                    consequatur ducimus quam nisi exercitationem omnis earum qui.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
