--- a/index.html
+++ b/index.html
@@ -219,7 +219,14 @@
                 </div>
             </section>
 
-            <section class="section-stories">
+            <section class="section-story">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm">
+                            Your Browser not suported!
+                    </video>
+                </div>
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         We make people genuinly happy
@@ -229,6 +236,9 @@
                         <div class="story">
                             <figure class="story__shape">
                                 <img src="img/nat-8.jpg" alt="person on a tour" class="story__img">
+                                <figcaption class="story__caption">
+                                    Mary Smith
+                                </figcaption>
                             </figure>
                             <div class="story__text">
                                 <h3 class="heading-tertiary u-margin-bottom-small">
@@ -243,6 +253,31 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="row">
+                        <div class="story">
+                            <figure class="story__shape">
+                                <img src="img/nat-9.jpg" alt="person on a tour" class="story__img">
+                                <figcaption class="story__caption">
+                                    Jack Wilson
+                                </figcaption>
+                            </figure>
+                            <div class="story__text">
+                                <h3 class="heading-tertiary u-margin-bottom-small">
+                                    Wow! My life is completely different now
+                                </h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, 
+                                    ipsum sapiente aspernatur libero repellat quis consequatur ducimus quam 
+                                    nisi exercitationem omnis earum qui. ipsum sapiente aspernatur libero repellat quis 
+                                    consequatur ducimus quam nisi exercitationem omnis earum qui.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
         </main>
